Fix content alignment

--- a/css/main.css
+++ b/css/main.css
@@ -6,18 +6,38 @@ html {
   box-sizing: inherit;
 }
 
-.btn-big {
-  font-size: 1.5rem;
-  padding: .5em .75em;
-  border-radius: 8px;
-  background-color: #333;
-  color: #fff;
-  display: inline-block;
-  text-decoration: none;
+body {
+  margin: 0;
+  width: 100%;
 }
 
-.btn-big:hover {
-  background-color: #000;
+.img-flex {
+  position: relative;
+  display: flex;
+  width: 100%;
+  max-width: 45em;
+  margin: 0;
+}
+
+.img {
+  display: flex;
+  margin: 0;
+  left: 50%;
+  top: 20%;
+  transform: translateX(-50%);
+}
+
+.banner {
+  max-height: 500px;
+  display: flex;
+  position: absolute;
+  left: 50%;
+  top: 20%;
+  transform: translateX(-50%);
+}
+
+.content {
+  max-width: 45em;
 }
 
 h2 {
@@ -30,10 +50,19 @@ p {
   font-size: 1.5rem;
 }
 
-.banner {
-  max-height: 500px;
+.btn {
+  padding: .5em .75em;
+  border-radius: 8px;
+  background-color: #333;
+  color: #fff;
+  display: inline-block;
+  text-decoration: none;
 }
 
-.content {
-  max-width: 45em;
+.btn-big {
+  font-size: 1.5rem;
+}
+
+.btn:hover {
+  background-color: #000;
 }
